fixes on mobile view

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -19,8 +19,8 @@ body {
 
 .container {
   position: $parentPosition;
-  width: 80%;
-  margin: auto;
+  width: 82%;
+  margin-left: 30px;
   padding-top: 94px;
 }
 
@@ -28,7 +28,7 @@ header {
   .header-container {
     position: $childPosition;
     img {
-      margin: -24px 0px 0px 88px;
+      margin: -24px 0px 0px 92px;
       display: $displayBlock;
     }
   }
@@ -62,8 +62,8 @@ main {
     }
   }
   .networks {
-    width: 315px;
-    height: 17px;
+    width: 98%;
+    height: 100%;
     display: $flex;
     margin: 30px auto 0;
     flex-wrap: wrap;
@@ -83,8 +83,7 @@ main {
     }
   }
   form {
-    width: 327px;
-    height: 108px;
+    width: auto;
     margin-top: 48px;
     position: $parentPosition;
   }
